@@ -4,14 +4,14 @@
  *
  * v1.0 originally written by Gregory Demar
  *
- * @copyright  Copyright (c) 2003-2018 Coppermine Dev Team
+ * @copyright  Copyright (c) 2003-2020 Coppermine Dev Team
  * @license    GNU General Public License version 3 or later; see LICENSE
  *
  * bridge/udb_base.inc.php
- * @since  1.6.04
+ * @since  1.6.08
  */
 
-if (!defined('IN_COPPERMINE')) die('Not in Coppermine...');
+defined('IN_COPPERMINE') or die('Not in Coppermine...');
 
 if (isset($bridge_lookup)) {
 	return;
@@ -380,9 +380,7 @@ class core_udb
 		$USER_DATA['can_see_all_albums'] = $USER_DATA['has_admin_access'];
 		$USER_DATA["group_id"] = $pri_group;
 		$USER_DATA['groups'] = $groups;
-		if (get_magic_quotes_gpc() == 0) {
-			$USER_DATA['group_name'] = cpg_db_escape_string($USER_DATA['group_name']);
-		}
+		$USER_DATA['group_name'] = cpg_db_escape_string($USER_DATA['group_name']);
 		return($USER_DATA);
 	}
 	// end function get_user_data
