@@ -1,18 +1,15 @@
 <?php
-/*************************
-  Coppermine Photo Gallery
-  ************************
-  Copyright (c) 2003-2016 Coppermine Dev Team
-  v1.0 originally written by Gregory Demar
-
-  This program is free software; you can redistribute it and/or modify
-  it under the terms of the GNU General Public License version 3
-  as published by the Free Software Foundation.
-
-  ********************************************
-  Coppermine version: 1.6.03
-  $HeadURL$
-**********************************************/
+/**
+ * Coppermine Photo Gallery
+ *
+ * v1.0 originally written by Gregory Demar
+ *
+ * @copyright  Copyright (c) 2003-2020 Coppermine Dev Team
+ * @license    GNU General Public License version 3 or later; see LICENSE
+ *
+ * include/mailer.inc.php
+ * @since  1.6.08
+ */
 
 // Custom mail function
 function cpg_mail ($to, $subject, $msg_body = '', $type = 'text/plain', $sender_name = '', $sender_email = '', $msg_body_plaintext = '')
@@ -2769,26 +2766,8 @@ class cpg_PHPMailer
 			if (!is_readable($path)) {
 				throw new cpg_phpmailerException($this->lang('file_open') . $path, self::STOP_CONTINUE);
 			}
-			$magic_quotes = get_magic_quotes_runtime();
-			if ($magic_quotes) {
-				if (version_compare(PHP_VERSION, '5.3.0', '<')) {
-					set_magic_quotes_runtime(false);
-				} else {
-					//Doesn't exist in PHP 5.4, but we don't need to check because
-					//get_magic_quotes_runtime always returns false in 5.4+
-					//so it will never get here
-					ini_set('magic_quotes_runtime', false);
-				}
-			}
 			$file_buffer = file_get_contents($path);
 			$file_buffer = $this->encodeString($file_buffer, $encoding);
-			if ($magic_quotes) {
-				if (version_compare(PHP_VERSION, '5.3.0', '<')) {
-					set_magic_quotes_runtime($magic_quotes);
-				} else {
-					ini_set('magic_quotes_runtime', $magic_quotes);
-				}
-			}
 			return $file_buffer;
 		} catch (Exception $exc) {
 			$this->setError($exc->getMessage());
