@@ -4,7 +4,7 @@
  *
  * v1.0 originally written by Gregory Demar
  *
- * @copyright  Copyright (c) 2003-2019 Coppermine Dev Team
+ * @copyright  Copyright (c) 2003-2020 Coppermine Dev Team
  * @license    GNU General Public License version 3 or later; see LICENSE
  *
  * install.php
@@ -1514,9 +1514,6 @@ function populateDatabase()
 	if (!isset($config['thumb_method'])) {
 		$GLOBALS['error'] = $language['no_thumb_method'];
 		return false;
-	}
-	if (@get_magic_quotes_runtime()) {
-		set_magic_quotes_runtime(0);
 	}
 	// Get a connection with the db.
 	list($dext, $dsub) = explode(':', $config['db_type'].':');
