@@ -3,7 +3,7 @@
  *
  * v1.0 originally written by Gregory Demar
  *
- * @copyright  Copyright (c) 2003-2019 Coppermine Dev Team
+ * @copyright  Copyright (c) 2003-2020 Coppermine Dev Team
  * @license    GNU General Public License version 3 or later; see LICENSE
  *
  * CHANGELOG.txt
@@ -20,6 +20,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2020-02-25 [M] Remove use of deprecated *magic_quotes* functions {ron4mac}
 2020-02-07 [A] Provide themes with a method to use font icons {ron4mac}
 2020-02-07 [M] Clean up rating icon in pics edit {ron4mac}
 2020-02-05 [B] Change javascript 'zebra' code to apply to table cells instead of rows {ron4mac}
